Fix of JDK-8034775 neglects to account for non-JIT VMs

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b14
    • x86
    • linux

        FULL PRODUCT VERSION :


        A DESCRIPTION OF THE PROBLEM :
        A zero variant build of the latest OpenJDK 9 dev forest fails on 'java -version' with:
        CICompilerCount of 0 is invalid; must be at least 1
        Error: Could not create the Java Virtual Machine.
        Error: A fatal exception has occurred. Program will exit.

        Since zero is a non-JIT JVM it should not need any just-in-time compiler threads. Byte codes get interpreted by the C++ Interpreter.

        This is a recent local zero build of the OpenJDK 9 dev forest[1]. Specifically revision 783309c3a1a6 of the hotspot repository.

        [1] http://hg.openjdk.java.net/jdk9/dev

        THE PROBLEM WAS REPRODUCIBLE WITH -Xint FLAG: Did not try

        THE PROBLEM WAS REPRODUCIBLE WITH -server FLAG: Did not try

        REGRESSION. Last worked in version 8

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        1. build latest forest of jdk9 dev: http://hg.openjdk.java.net/jdk9/dev using the zero variant
            (--with-jvm-variants=zero)
        2. java -version fails to run

        EXPECTED VERSUS ACTUAL BEHAVIOR :
        Actual Results:
        CICompilerCount of 0 is invalid; must be at least 1
        Error: Could not create the Java Virtual Machine.
        Error: A fatal exception has occurred. Program will exit.

        Expected Results (something along the lines of):
        openjdk version "1.9.0-internal-debug"
        OpenJDK Runtime Environment (build 1.9.0-internal-debug-sgeholf_2014_04_28_11_14-b00)
        OpenJDK 64-Bit Zero VM (build 25.0-b62-debug, interpreted mode)
        REPRODUCIBILITY :
        This bug can be reproduced always.

        CUSTOMER SUBMITTED WORKAROUND :
        java -XX:CICompilerCount=1 -version works as expected for zero JVMs.

              Assignee:
              Albert Noll (Inactive)
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: