8041992: Fix of JDK-8034775 neglects to account for non-JIT VMs

Allow 0 compiler threads if no JIT is used.

Reviewed-by: kvn, dholmes